avniproject/avni-server#900 - mandatory check removal for QG/QRG observations. bug fix in sample download.